--- a/lightbox-project/css/style.css
+++ b/lightbox-project/css/style.css
@@ -27,4 +27,23 @@ ul li img {
 a {
   text-decoration: none;
 }
-/** Start Coding Here **/
+
+#overlay {
+  background: rgba(0,0,0,0.7);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+#overlay img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+}
+#overlay img, #overlay p {
+  text-align: center;
+  color: white;
+}
