--- a/password-confirmation/css/style.css
+++ b/password-confirmation/css/style.css
@@ -41,7 +41,7 @@ input[type="password"]:focus {
 }
 span {
   border-radius: 5px;
-  display: block;
+  display: none;
   font-size: 1.3em;
   text-align: center;
   position: absolute;
