--- a/draw/css/style.css
+++ b/draw/css/style.css
@@ -69,7 +69,7 @@ button {
   font-size: 16px;
   line-height: 40px;
 }
-#revealColorSelect {
+#revealColorSelect, #download {
   border: none;
   border-radius: 5px;
   margin: 10px auto;
