--- a/draw/css/style.css
+++ b/draw/css/style.css
@@ -21,7 +21,7 @@ ul {
   list-style:none;
   margin: 0;
   float:  left;
-  padding: 10px 0 20px;
+  padding: 10px 0 0;
   width: 100%;
   text-align: center;
 }
@@ -137,4 +137,12 @@ button {
   margin: 10px -10px -7px;
   padding: 5px 10px;
   width: 325px;
+}
+
+#info {
+  text-align: center;
+  margin: 0;
+  color: #6A845F;
+  text-shadow: 0 1px black;
+  font-size: 12px;
 }
