--- a/lightbox/css/style.css
+++ b/lightbox/css/style.css
@@ -27,6 +27,11 @@ ul li img {
 a {
   text-decoration: none;
 }
+@media screen and (max-device-width: 568px) {
+  ul {
+    max-width: 100%;
+  }
+}
 
 #overlay {
   background: rgba(0,0,0,0.7);
