--- a/fading-list/css/fading.css
+++ b/fading-list/css/fading.css
@@ -16,10 +16,18 @@ header {
 }
 
 header h2 {
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 header h3 {
-  margin-top: 5px;
+  opacity: 0.4;
+}
+
+header h4 {
   opacity: 0.2;
+}
+
+header h3,
+header h4 {
+  margin-top: 5px;
 }
